Zombie should spawn now and fixed pathfinding test error