@@ -37,13 +37,26 @@
     <dependency>
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
-      <version>5.2.0</version>
+      <version>5.8.0</version>
       <scope>test</scope>
     </dependency>
     
   </dependencies>
   <build>
   <plugins>
+    <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-surefire-plugin</artifactId>
+      <version>3.2.5</version>
+      <configuration>
+        <useModulePath>false</useModulePath>
+        <argLine>
+          --add-opens java.base/java.lang=ALL-UNNAMED
+          --add-opens dk.sdu.pathfinding/dk.sdu.pathfinding=ALL-UNNAMED
+          --add-reads dk.sdu.pathfinding=ALL-UNNAMED
+        </argLine>
+      </configuration>
+    </plugin>
     <plugin>
       <artifactId>maven-dependency-plugin</artifactId>
       <version>3.0.2</version>
